--- a/PermuteMMO.Tests/PermuteMMO.Tests.csproj
+++ b/PermuteMMO.Tests/PermuteMMO.Tests.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,6 +25,22 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PermuteMMO.Lib\PermuteMMO.Lib.csproj" />
+    <ProjectReference Include="..\PermuteMMO.Reversal\PermuteMMO.Reversal.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
