--- a/PermuteMMO.Reversal/PermuteMMO.Reversal.csproj
+++ b/PermuteMMO.Reversal/PermuteMMO.Reversal.csproj
@@ -15,6 +15,21 @@
     <PackageReference Include="PKHeX.Core" Version="22.3.1" />
   </ItemGroup>
 
+  <Choose>
+    <When Condition=" '$(Platform)' == 'x64' OR $(RuntimeIdentifier.EndsWith('x64')) ">
+      <!-- x64 specific references -->
+      <ItemGroup>
+        <PackageReference Include="Microsoft.Z3" Version="4.8.14" />
+      </ItemGroup>
+    </When>
+    <Otherwise>
+      <!-- x86 specific references -->
+      <ItemGroup>
+        <PackageReference Include="Microsoft.Z3.x86" Version="4.8.15" />
+      </ItemGroup>
+    </Otherwise>
+  </Choose>
+
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
