--- a/PermuteMMO.ReversalApp/PermuteMMO.ReversalApp.csproj
+++ b/PermuteMMO.ReversalApp/PermuteMMO.ReversalApp.csproj
@@ -1,15 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Platforms>AnyCPU</Platforms>
+    <Platforms>x64;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PermuteMMO.Lib\PermuteMMO.Lib.csproj" />
+    <ProjectReference Include="..\PermuteMMO.Reversal\PermuteMMO.Reversal.csproj" />
   </ItemGroup>
 
 </Project>
