--- a/PermuteMMO.Lib/PermuteMMO.Lib.csproj
+++ b/PermuteMMO.Lib/PermuteMMO.Lib.csproj
@@ -4,11 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
-    <PackageReference Include="PKHeX.Core" Version="22.3.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="PKHeX.Core" Version="22.6.1" />
   </ItemGroup>
 
   <ItemGroup>
